# suite3d

./: .gitignore  .gitmodules  Dockerfile  Dockerfile2  README.md  changelog.md  environment.yml  environment_full.yml  py310_demo.ipynb  pyproject.toml  test_python.yml  utils.py
.github/workflows/: test_python.yml
benchmarking/: corr_map.ipynb  detection3d_bench.py  example_for_new_jobs.ipynb  initialization.ipynb  registration.ipynb  registration_cpu.ipynb
benchmarking/.ipynb_checkpoints/: corr_map-checkpoint.ipynb  initialization-checkpoint.ipynb  (+1 more)
debugging/: db_registration.py  db_segmentation.py  db_vmap.py
demos/: Demo-LBM Data.ipynb  Demo-Standard Data.ipynb  Demo.ipynb  Demo_Coconut.ipynb  Demo_standard_2p_data.ipynb  Full Demo with SVD Denoising.ipynb  Full_Demo.ipynb  Full_Demo_GPU.ipynb  Full_Demo_standard_data.ipynb  Untitled.ipynb  demo_2025_04_14.ipynb  demo_pipeline.py  developer_redcelldetection.ipynb  mbo_demo_ws.ipynb
dev/: curator.ipynb
dev_nb/: 2024-01-22_fix_edges_vmap.ipynb  2024-02-05_fix strips.ipynb  2024-02-14-sweep-celldetection.ipynb  2024-03-17 - panels.ipynb  Full_Demo-Coconut.ipynb  Full_Demo_ali-Copy1.ipynb  Full_Demo_ali.ipynb  Untitled.ipynb  Untitled1.ipynb  combine_fusing_and_registration.ipynb  corrmap_ram_debugging.ipynb  dask-svd-gpu.ipynb  detection-patch-edge-duplicated.ipynb  fusing_improved.ipynb  is_filter_necessary.ipynb  plots_for_ccns.ipynb  registration-cpu_3d-shorter.ipynb  registration-cpu_3d.ipynb  registration-dev.ipynb  registration_combined.ipynb  registration_gpu_3d.ipynb  registration_gpu_vs_cpu.ipynb  registration_nonrigid_compute_shifts_gpu_vs_cpu.ipynb  registration_nonrigid_transform_gpu_vs_cpu.ipynb  test_gpu_registration.ipynb
notebooks/: Demo_01--File_IO--Registration--Fusing.ipynb  Demo_02--Correlation_Map--Cell_Detection.ipynb  Demo_03--Extract_Activity--Visualize.ipynb  Full_Demo.ipynb  example.ipynb
parallel_testing/: Chunk_size.ipynb  corrmap_function.ipynb  svd_compressed_test.ipynb
runs/: template.ipynb
suite3d/: __main__.py  corrmap.py  curation.py  dcnv.py  default_params.py  detection3d.py  developer.py  extension.py  file_utils.py  init_pass.py  io.py  iter_step.py  job.py  labeller.py  lbmio.py  nbtools.py  plot_utils.py  quality_metrics.py  reference_image.py  reg_3d.py  register_gpu.py  s2p_registration.py  svd_utils.py  tiff_utils.py  ui.py  utils.py
utils/: file_utils.py  tiff_utils.py  utils.py
webui/: corrmap_panel.py  init_pass_panel.py  job_interface.py  registration_panel.py  volume_vis.py  webui.py
(+200 files in other folders)
